# Freshman-Programming-Little-Dinosaur-Game

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
src/: OptimizedDinoGame.cpp  OptimizedDinoGame.h  OptimizedMain.cpp
